<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp"
        android:textStyle="bold"
        android:textSize="75sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_reaction_times"
        android:id="@+id/reactionButton"
        android:layout_marginTop="69dp"
        android:layout_below="@+id/title"
        android:layout_alignEnd="@+id/buzzerButton"
        android:layout_alignStart="@+id/buzzerButton"
        android:onClick="reactionTimes"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_buzzer"
        android:id="@+id/buzzerButton"
        android:layout_below="@+id/reactionButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:onClick="buzzer"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_statistics"
        android:id="@+id/statsButton"
        android:layout_below="@+id/buzzerButton"
        android:layout_alignStart="@+id/buzzerButton"
        android:layout_marginTop="32dp"
        android:layout_alignEnd="@+id/buzzerButton"
        android:onClick="statistics"/>
</RelativeLayout>
